[gd_scene load_steps=7 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_UI2D/scripts/OQ_UI2DCanvas.gd" type="Script" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/scripts/helper_UIArea.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
margin = 0.001
extents = Vector3( 0.5, 0.5, 0.001 )

[sub_resource type="ViewportTexture" id=2]
flags = 4
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
params_cull_mode = 2
albedo_texture = SubResource( 2 )

[sub_resource type="PlaneMesh" id=4]
resource_local_to_scene = true
material = SubResource( 3 )
size = Vector2( 1, 1 )

[node name="OQ_UI2DCanvas" type="Spatial"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 512, 256 )
transparent_bg = true
hdr = false
disable_3d = true
keep_3d_linear = true
usage = 0

[node name="UIArea" type="Area" parent="."]
collision_layer = 524288
collision_mask = 0
script = ExtResource( 2 )

[node name="UICollisionShape" type="CollisionShape" parent="UIArea"]
shape = SubResource( 1 )

[node name="UIMeshInstance" type="MeshInstance" parent="UIArea"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null
